fix stupid overflow (https://todo.sr.ht/~boehs/boehs/20)

--- a/src/_public/main.scss
+++ b/src/_public/main.scss
@@ -46,6 +46,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-wrap: break-word;
 
   & > div {
     padding: 75px 0;
